--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Zadatak1</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="container">
-        <p>Krecemo!</p>
+        <img src="img/IMG1.jpg" class="img">
+        <div class="white"></div>
+        <div class="blue"></div>
+        <div class="red"></div>
     </div>
 </body>
-
 </html>
